# esphome-hitachi-ac

./: .gitignore  .gitmodules  CMakeLists.txt  library.json  platformio.ini  pyproject.toml  uv.toml
.esphome/idedata/: hitachi_ac_test.json
.esphome/storage/: deploy.yaml.json
components/climate_lg2/: __init__.py  climate.py  climate_ir.cpp  climate_ir.h  climate_lg2.cpp  climate_lg2.h
components/climate_lgg/: climate.py  climate_lgg.cpp  climate_lgg.h
components/hitachi_ac/: __init__.py  climate.py  hitachi_ac.cpp  hitachi_ac.h
components/lg_climate/: climate.py  lg_climate.cpp  lg_climate.h
components/lloyd_climate/: climate.py  lloyd_climate.cpp  lloyd_climate.h
components/voltas_climate/: __init__.py  climate.py  voltas_climate.cpp  voltas_climate.h
tests/components/hitachi_ac/: test.yaml
